# libdbi-drivers

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  Makefile.w32  NEWS  README  README.drivers  README.encodings  README.osx  README.win32  TODO  acinclude.m4  aclocal.m4  autogen.sh  balabit-build  balabit-unix-build  config.h.in  configure  configure.in  fixlt.sh  libdbi.spec.in
debian/: changelog  control  copyright  files  libdbd-firebird.docs  libdbd-firebird.install  libdbd-freetds.install  libdbd-mysql.doc-base  libdbd-mysql.docs  libdbd-mysql.install  libdbd-mysql.postinst.debhelper  libdbd-mysql.prerm.debhelper  libdbd-mysql.substvars  libdbd-oracle.dirs  libdbd-oracle.doc-base  libdbd-oracle.docs  libdbd-oracle.install  libdbd-pgsql.doc-base  libdbd-pgsql.docs  libdbd-pgsql.install  libdbd-pgsql.postinst.debhelper  libdbd-pgsql.prerm.debhelper  libdbd-sqlite.dirs  libdbd-sqlite.doc-base  libdbd-sqlite.docs  libdbd-sqlite.files  libdbd-sqlite.install  libdbd-sqlite.postinst.debhelper  libdbd-sqlite.prerm.debhelper  libdbd-sqlite.substvars  libdbd-sqlite3.docs  libdbd-sqlite3.install  rules  watch
doc/: .cvsignore  Makefile.am  manual.sgml
doc/include/: Makefile.am  doc-print.dsl
drivers/: .cvsignore  Makefile.am  Makefile.in
drivers/firebird/: AUTHORS  Makefile.am  README  TODO  dbd_firebird.c  dbd_firebird.h  dbd_firebird.sgml  firebird_charsets.h  utility.c  utility.h
drivers/freetds/: Makefile.am  README  dbd_freetds.c  dbd_freetds.h
drivers/ingres/: AUTHORS  ChangeLog  Makefile.am  README  TODO  dbd_ingres.c  dbd_ingres.h  dbd_ingres.sgml  months.gperf  months.gperf.c
drivers/msql/: .cvsignore  AUTHORS  Makefile.am  dbd_msql.c  dbd_msql.h  dbd_msql.sgml
drivers/mysql/: AUTHORS  Makefile.am  README  TODO  dbd_mysql.c  dbd_mysql.h  dbd_mysql.sgml
drivers/oracle/: .cvsignore  AUTHORS  Changelog  Makefile.am  README  TODO  dbd_oracle.c  dbd_oracle.h  dbd_oracle.sgml  oracle_charsets.h
drivers/pgsql/: .cvsignore  AUTHORS  Makefile.am  README  TODO  dbd_pgsql.c  dbd_pgsql.h  dbd_pgsql.sgml
drivers/sqlite/: .cvsignore  AUTHORS  Makefile.am  Makefile.in  README  dbd_sqlite.c  dbd_sqlite.h  dbd_sqlite.sgml
drivers/sqlite3/: AUTHORS  Makefile.am  README  TODO  dbd_sqlite3.c  dbd_sqlite3.h  dbd_sqlite3.sgml
tests/: .cvsignore  Makefile.am  Makefile.in  libdbitest  test_dbi.c
tgz2build/: Makefile.am  libdbd-freetds.files  libdbd-mysql.files  libdbd-oracle.files  libdbd-pgsql.files  libdbd-sqlite3.files  rules
